# duckdb-workers

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: client.py  coordinator.py  main.py  worker.py
src/final_project/: client.py  coordinator.py  flight_server.py  setup.py  worker.py
tests/: basic_request.py  crypto_parquet.py
tests/data/: crypto_files.txt
