[project]
name = "duckdb-workers"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "blinker==1.9.0",
    "boto3>=1.43.32",
    "certifi==2026.2.25",
    "charset-normalizer==3.4.5",
    "click==8.3.1",
    "dnspython==2.8.0",
    "duckdb==1.4.4",
    "email-validator==2.3.0",
    "fastapi-cli==0.0.24",
    "fastapi-cloud-cli==0.14.0",
    "fastar==0.8.0",
    "flask==3.1.3",
    "grpcio==1.78.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "idna==3.11",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "numpy==2.4.2",
    "pandas==3.0.1",
    "pyarrow==23.0.1",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-extra-types==2.11.0",
    "pydantic-settings==2.13.1",
    "pygments==2.19.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.22",
    "pyyaml==6.0.3",
    "requests==2.32.5",
    "rich==14.3.3",
    "rich-toolkit==0.19.7",
    "rignore==0.7.6",
    "sentry-sdk==2.54.0",
    "shellingham==1.5.4",
    "six==1.17.0",
    "starlette==0.52.1",
    "typer==0.24.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "uvicorn==0.41.0",
    "uvloop==0.22.1",
    "watchfiles==1.1.1",
    "websockets==16.0",
    "werkzeug==3.1.6",
]
